# agora_rtc_ng_flutter

./: .gitignore  .pubignore  README.md  ffigen_config.yaml  pubspec.yaml
.github/workflows/: build.yml
android/: .gitignore  build.gradle
example/: README.md
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/config/: agora.config.dart
example/lib/examples/: example_actions_widget.dart  remote_video_views_widget.dart
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/test/: widget_test.dart
integration_test_app/: .gitignore  pubspec.yaml
integration_test_app/android/app/: build.gradle
integration_test_app/integration_test/: agora_video_view_smoke_test.dart  localspatialaudioengine_smoke_test.dart  mediarecorder_smoke_test.dart  rtcengine_ext_smoke_test.dart
integration_test_app/ios/Runner.xcodeproj/: project.pbxproj
integration_test_app/macos/Flutter/: GeneratedPluginRegistrant.swift
integration_test_app/macos/Runner.xcodeproj/: project.pbxproj
integration_test_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: AgoraRtcWrapper.podspec  agora_rtc_engine.podspec  agora_rtc_ng.podspec
iris_event/android/: build.gradle  settings.gradle
iris_event/cxx/: build-android.sh  build-ios.sh
iris_event/cxx/src/: iris_event.h
iris_event/example/lib/: main.dart
iris_event/example/test/: widget_test.dart
iris_event/example/windows/: CMakeLists.txt
iris_event/ios/Classes/: IrisEventPlugin.h  IrisEventPlugin.m  SwiftIrisEventPlugin.swift
iris_event/lib/: iris_event_method_channel.dart  iris_event_platform_interface.dart
iris_event/test/: iris_event_method_channel_test.dart  iris_event_test.dart
iris_event/windows/: CMakeLists.txt
lib/: agora_rtc_ng.dart  agora_rtc_ng_debug.dart
lib/src/: agora_base.dart  agora_log.dart  agora_media_base.dart  agora_media_base.g.dart  agora_media_engine.dart  agora_media_player.dart  agora_media_player_source.dart  agora_media_player_types.dart  agora_media_recorder.dart  agora_media_streaming_source.dart  agora_rhythm_player.dart  agora_rtc_engine.dart  agora_rtc_engine.g.dart  agora_rtc_engine_ex.dart  agora_rtc_engine_ext.dart  agora_spatial_audio.dart  audio_device_manager.dart  binding_forward_export.dart
lib/src/impl/: api_caller.dart  (+11 more)
macos/: agora_rtc_engine.podspec  agora_rtc_ng.podspec
macos/Classes/: TextureRenderer.mm
scripts/: build-iris-android.sh
test/: agora_rtc_ng_method_channel_test.dart  agora_rtc_ng_test.dart
test_shard/destroy_irisengine_smoke_test/: pubspec.yaml
windows/: CMakeLists.txt  agora_rtc_engine_plugin.cpp  texture_render.cc  video_view_controller.cc
(+77 files in other folders)
